test and fix